cpp/include/cudf/functions.h

/* --------------------------------------------------------------------------*/
/** 
 * @brief  Start a NVTX range with predefined color.
 *
 * This function is useful only for profiling with nvvp or Nsight Systems. It
 * demarcates the begining of a user-defined range with a specified name and
 * color that will show up in the timeline view of nvvp/Nsight Systems. Can be
 * nested within other ranges.
 * 
 * @Param[in] name The name of the NVTX range
 * @Param[in] color The predefined gdf_color enum to use to color this range
 * 
 * @Returns   
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_nvtx_range_push(char const * const name, gdf_color color );
/* --------------------------------------------------------------------------*/
/** 
 * @brief  Start a NVTX range with a custom ARGB color code.
 *
 * This function is useful only for profiling with nvvp or Nsight Systems. It
 * demarcates the begining of a user-defined range with a specified name and
 * color that will show up in the timeline view of nvvp/Nsight Systems. Can be
 * nested within other ranges.
 * 
 * @Param[in] name The name of the NVTX range
 * @Param[in] color The ARGB hex color code to use to color this range (e.g., 0xFF00FF00)
 * 
 * @Returns   
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_nvtx_range_push_hex(char const * const name, unsigned int color );
/* --------------------------------------------------------------------------*/
/** 
 * @brief Ends the inner-most NVTX range.
 *
 * This function is useful only for profiling with nvvp or Nsight Systems. It
 * will demarcate the end of the inner-most range, i.e., the most recent call to
 * gdf_nvtx_range_push.
 * 
 * @Returns   
 */
/* --------------------------------------------------------------------------*/
gdf_error gdf_nvtx_range_pop();
/* --------------------------------------------------------------------------*/
/** 
 * @brief  Counts the number of valid bits in the mask that corresponds to
 * the specified number of rows.
 * 
 * @Param[in] masks Array of gdf_valid_types with enough bits to represent
 * num_rows number of rows
 * @Param[in] num_rows The number of rows represented in the bit-validity mask.
 * @Param[out] count The number of valid rows in the mask
 * 
 * @Returns  GDF_SUCCESS upon successful completion. 
 */
/* --------------------------------------------------------------------------*/
gdf_error gdf_count_nonzero_mask(gdf_valid_type const *masks,
                                 gdf_size_type num_rows, gdf_size_type *count);
/* column operations */

/* --------------------------------------------------------------------------*/
/** 
 * @brief Return the size of the gdf_column data type.
 *
 * @Returns gdf_size_type Size of the gdf_column data type.
 */
/* ----------------------------------------------------------------------------*/
gdf_size_type gdf_column_sizeof();
/* --------------------------------------------------------------------------*/
/** 
 * @brief Create a GDF column given data and validity bitmask pointers, size, and
 *        datatype
 *
 * @Param[out] column The output column.
 * @Param[in] data Pointer to data.
 * @Param[in] valid Pointer to validity bitmask for the data.
 * @Param[in] size Number of rows in the column.
 * @Param[in] dtype Data type of the column.
 * 
 * @Returns gdf_error Returns GDF_SUCCESS upon successful creation.
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_column_view(gdf_column *column, void *data, gdf_valid_type *valid,
                          gdf_size_type size, gdf_dtype dtype);
/* --------------------------------------------------------------------------*/
/** 
 * @brief Create a GDF column given data and validity bitmask pointers, size, and
 *        datatype, and count of null (non-valid) elements
 *
 * @Param[out] column The output column.
 * @Param[in] data Pointer to data.
 * @Param[in] valid Pointer to validity bitmask for the data.
 * @Param[in] size Number of rows in the column.
 * @Param[in] dtype Data type of the column.
 * @Param[in] null_count The number of non-valid elements in the validity bitmask
 * 
 * @Returns gdf_error Returns GDF_SUCCESS upon successful creation.
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_column_view_augmented(gdf_column *column, void *data, gdf_valid_type *valid,
                          gdf_size_type size, gdf_dtype dtype, gdf_size_type null_count);
/* --------------------------------------------------------------------------*/
/** 
 * @brief Free the CUDA device memory of a gdf_column
 *
 * @param[in,out] column Data and validity bitmask pointers of this column will be freed
 * 
 * @Returns gdf_error GDF_SUCCESS or GDF_ERROR if there is an error freeing the data
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_column_free(gdf_column *column);
/* --------------------------------------------------------------------------*/
/** 
 * @brief  Concatenates the gdf_columns into a single, contiguous column,
 * including the validity bitmasks
 * 
 * @Param[out] output A column whose buffers are already allocated that will 
 * @Param[in] columns_to_conat[] The columns to concatenate
 * @Param[in] num_columns The number of columns to concatenate
 * contain the concatenation of the input columns
 * 
 * @Returns GDF_SUCCESS upon successful completion
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_column_concat(gdf_column *output, gdf_column *columns_to_concat[], int num_columns);
/* context operations */

/* --------------------------------------------------------------------------*/
/**
 * @brief  Constructor for the gdf_context struct
 *
 * @Param[out] gdf_context being constructed
 * @Param[in] Indicates if the input data is sorted. 0 = No, 1 = yes
 * @Param[in] the method to be used for the operation (e.g., sort vs hash)
 * @Param[in] for COUNT: DISTINCT = 1, else = 0
 *
 * @Returns GDF_SUCCESS upon successful compute, otherwise returns appropriate error code
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_context_view(gdf_context *context, int flag_sorted, gdf_method flag_method,
                           int flag_distinct, int flag_sort_result, int flag_sort_inplace);
/* error handling */

/* --------------------------------------------------------------------------*/
/**
 * @brief  Converts a gdf_error error code into a string
 *
 * @Param[in] gdf_error
 *
 * @Returns  name of the error
 */
/* ----------------------------------------------------------------------------*/
const char * gdf_error_get_name(gdf_error errcode);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns the last error from a runtime call.
 *
 * @Returns  last error from a runtime call.
 */
/* ----------------------------------------------------------------------------*/
int gdf_cuda_last_error();
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns the description string for an error code.
 *
 * @Param[in] cuda error code
 *
 * @Returns  description string for an error code.
 */
/* ----------------------------------------------------------------------------*/
const char * gdf_cuda_error_string(int cuda_error);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns the string representation of an error code enum name.
 *
 * @Param[in] cuda error code
 *
 * @Returns  string representation of an error code enum name.
 */
/* ----------------------------------------------------------------------------*/
const char * gdf_cuda_error_name(int cuda_error);
/* ipc */

/* --------------------------------------------------------------------------*/
/**
 * @brief  Opens a parser from a pyarrow RecordBatch schema
 *
 * @Param[in] Pointer to a byte array containing the pyarrow RecordBatch schema
 * @Param[in] Size of the byte array
  *
 * @Returns Pointer to a parsing struct gdf_ipc_parser_type
 */
/* ----------------------------------------------------------------------------*/
gdf_ipc_parser_type* gdf_ipc_parser_open(const uint8_t *schema, size_t length);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Opens a pyarrow RecordBatch bytearray
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 * @Param[in] Pointer to a pyarrow RecordBatch bytearray
 * @Param[in] Size of the byte array
 *
 * @Returns
 */
/* ----------------------------------------------------------------------------*/
void gdf_ipc_parser_open_recordbatches(gdf_ipc_parser_type *handle,
                                       const uint8_t *recordbatches,
                                       size_t length);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Closes a parser from a pyarrow RecordBatch schema
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns void
 */
/* ----------------------------------------------------------------------------*/
void gdf_ipc_parser_close(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Checks for a failure in the parser
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns 1 if error
 */
/* ----------------------------------------------------------------------------*/
int gdf_ipc_parser_failed(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns parsed data as json
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns char* of parsed data as json
 */
/* ----------------------------------------------------------------------------*/
const char* gdf_ipc_parser_to_json(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Gets error from gdf_ipc_parser_type
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns Error message as char*
 */
/* ----------------------------------------------------------------------------*/
const char* gdf_ipc_parser_get_error(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Gets parsed data from gdf_ipc_parser_type
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns Pointer parsed data
 */
/* ----------------------------------------------------------------------------*/
const void* gdf_ipc_parser_get_data(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Gets data offset from gdf_ipc_parser_type
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns Data offset
 */
/* ----------------------------------------------------------------------------*/
int64_t gdf_ipc_parser_get_data_offset(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns parsed schema as json
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns char* of parsed schema as json
 */
/* ----------------------------------------------------------------------------*/
const char *gdf_ipc_parser_get_schema_json(gdf_ipc_parser_type *handle);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Returns layout as json
 *
 * @Param[in] Pointer to a parsing struct gdf_ipc_parser_type
 *
 * @Returns char* of layout as json
 */
/* ----------------------------------------------------------------------------*/
const char *gdf_ipc_parser_get_layout_json(gdf_ipc_parser_type *handle);
/* sorting */

/* --------------------------------------------------------------------------*/
/**
 * @brief  Constructor for the gdf_radixsort_plan_type object
 *
 * @Param[in] Number of items to sort
 * @Param[in] Indicates if sort should be ascending or descending. 1 = Descending, 0 = Ascending
 * @Param[in] The least-significant bit index (inclusive) needed for key comparison
 * @Param[in] The most-significant bit index (exclusive) needed for key comparison (e.g., sizeof(unsigned int) * 8)
 *
 * @Returns  gdf_radixsort_plan_type object pointer
 */
/* ----------------------------------------------------------------------------*/
gdf_radixsort_plan_type* gdf_radixsort_plan(size_t num_items, int descending,
                                        unsigned begin_bit, unsigned end_bit);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Allocates device memory for the radixsort
 *
 * @Param[in] Radix sort plan
 * @Param[in] sizeof data type of key
 * @Param[in] sizeof data type of val
 *
 * @Returns GDF_SUCCESS upon successful compute, otherwise returns appropriate error code
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_radixsort_plan_setup(gdf_radixsort_plan_type *hdl,
                                   size_t sizeof_key, size_t sizeof_val);
/* --------------------------------------------------------------------------*/
/**
 * @brief  Frees device memory used for the radixsort
 *
 * @Param[in] Radix sort plan
 *
 * @Returns GDF_SUCCESS upon successful compute, otherwise returns appropriate error code
 */
/* ----------------------------------------------------------------------------*/
gdf_error gdf_radixsort_plan_free(gdf_radixsort_plan_type *hdl);