cudf/bind/cudf_cpp.pxd

# Copyright (c) 2018, NVIDIA CORPORATION.

# cython: profile=False
# distutils: language = c++
# cython: embedsignature = True
# cython: language_level = 3

from libcpp cimport bool
from numpy cimport uint8_t, int64_t, int32_t, int16_t, int8_t

# Utility functions to build gdf_columns, gdf_context and error handling

cpdef _get_ctype_ptr(obj)
cpdef _get_column_data_ptr(obj)
cpdef _get_column_valid_ptr(obj)

cdef gdf_column* column_view_from_column(col)
cdef gdf_column* column_view_from_NDArrays(size, data, mask,
                                           dtype, null_count)

cdef gdf_context* create_context_view(flag_sorted, method, flag_distinct,
                                      flag_sort_result, flag_sort_inplace)

cpdef check_gdf_error(errcode)

# Import cudf.h header to import all functions
# First version of bindings has no changes to the cudf.h header, so this file
# mirrors the structure in cpp/include

cdef extern from "gdf.h" nogil:

    ctypedef size_t gdf_size_type
    ctypedef gdf_size_type gdf_index_type
    ctypedef unsigned char gdf_valid_type
    ctypedef long    gdf_date64
    ctypedef int     gdf_date32
    ctypedef int     gdf_category

    ctypedef enum gdf_dtype:
        GDF_invalid=0,
        GDF_INT8,
        GDF_INT16,
        GDF_INT32,
        GDF_INT64,
        GDF_FLOAT32,
        GDF_FLOAT64,
        GDF_DATE32,
        GDF_DATE64,
        GDF_TIMESTAMP,
        GDF_CATEGORY,
        GDF_STRING,
        N_GDF_TYPES,

    ctypedef enum gdf_error:
        GDF_SUCCESS=0,
        GDF_CUDA_ERROR,
        GDF_UNSUPPORTED_DTYPE,
        GDF_COLUMN_SIZE_MISMATCH,
        GDF_COLUMN_SIZE_TOO_BIG,
        GDF_DATASET_EMPTY,
        GDF_VALIDITY_MISSING,
        GDF_VALIDITY_UNSUPPORTED,
        GDF_INVALID_API_CALL,
        GDF_JOIN_DTYPE_MISMATCH,
        GDF_JOIN_TOO_MANY_COLUMNS,
        GDF_DTYPE_MISMATCH,
        GDF_UNSUPPORTED_METHOD,
        GDF_INVALID_AGGREGATOR,
        GDF_INVALID_HASH_FUNCTION,
        GDF_PARTITION_DTYPE_MISMATCH,
        GDF_HASH_TABLE_INSERT_FAILURE,
        GDF_UNSUPPORTED_JOIN_TYPE,
        GDF_C_ERROR,
        GDF_FILE_ERROR,
        GDF_MEMORYMANAGER_ERROR,
        GDF_UNDEFINED_NVTX_COLOR,
        GDF_NULL_NVTX_NAME,
        N_GDF_ERRORS


    ctypedef enum gdf_hash_func:
        GDF_HASH_MURMUR3=0,
        GDF_HASH_IDENTITY,


    ctypedef enum gdf_time_unit:
        TIME_UNIT_NONE=0
        TIME_UNIT_s,
        TIME_UNIT_ms,
        TIME_UNIT_us,
        TIME_UNIT_ns


    ctypedef struct gdf_dtype_extra_info:
        gdf_time_unit time_unit

    # ctypedef struct gdf_column_{
    #     void *data
    #     gdf_valid_type *valid
    #     gdf_size_type size
    #     gdf_dtype dtype
    #     gdf_size_type null_count
    #     gdf_dtype_extra_info dtype_info
    #     char *          col_name
    #  gdf_column
    ctypedef struct gdf_column:
        void *data
        gdf_valid_type *valid
        gdf_size_type size
        gdf_dtype dtype
        gdf_size_type null_count
        gdf_dtype_extra_info dtype_info
        char *col_name

    ctypedef enum gdf_method:
      GDF_SORT = 0,
      GDF_HASH,
      N_GDF_METHODS,


    ctypedef enum gdf_quantile_method:
      GDF_QUANT_LINEAR =0,
      GDF_QUANT_LOWER,
      GDF_QUANT_HIGHER,
      GDF_QUANT_MIDPOINT,
      GDF_QUANT_NEAREST,
      N_GDF_QUANT_METHODS,



    ctypedef enum gdf_agg_op:
      GDF_SUM = 0,
      GDF_MIN,
      GDF_MAX,
      GDF_AVG,
      GDF_COUNT,
      GDF_COUNT_DISTINCT,
      N_GDF_AGG_OPS,




    ctypedef enum gdf_color:
      GDF_GREEN = 0,
      GDF_BLUE,
      GDF_YELLOW,
      GDF_PURPLE,
      GDF_CYAN,
      GDF_RED,
      GDF_WHITE,
      GDF_DARK_GREEN,
      GDF_ORANGE,
      GDF_NUM_COLORS,



    ctypedef struct gdf_context:
      int flag_sorted
      gdf_method flag_method
      int flag_distinct
      int flag_sort_result
      int flag_sort_inplace


    ctypedef struct _OpaqueIpcParser:
        pass
    ctypedef struct  gdf_ipc_parser_type:
        pass


    ctypedef struct _OpaqueRadixsortPlan:
        pass
    ctypedef struct  gdf_radixsort_plan_type:
        pass


    ctypedef struct _OpaqueSegmentedRadixsortPlan:
        pass
    ctypedef struct  gdf_segmented_radixsort_plan_type:
        pass




    ctypedef enum order_by_type:
        GDF_ORDER_ASC,
        GDF_ORDER_DESC


    ctypedef enum gdf_comparison_operator:
        GDF_EQUALS,
        GDF_NOT_EQUALS,
        GDF_LESS_THAN,
        GDF_LESS_THAN_OR_EQUALS,
        GDF_GREATER_THAN,
        GDF_GREATER_THAN_OR_EQUALS


    ctypedef enum window_function_type:
        GDF_WINDOW_RANGE,
        GDF_WINDOW_ROW


    ctypedef enum window_reduction_type:
        GDF_WINDOW_AVG,
        GDF_WINDOW_SUM,
        GDF_WINDOW_MAX,
        GDF_WINDOW_MIN,
        GDF_WINDOW_COUNT,
        GDF_WINDOW_STDDEV,
        GDF_WINDOW_VA


        #pragma once

    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis  Start a NVTX range with predefined color.
    #  *
    #  * This function is useful only for profiling with nvvp or Nsight Systems. It
    #  * demarcates the begining of a user-defined range with a specified name and
    #  * color that will show up in the timeline view of nvvp/Nsight Systems. Can be
    #  * nested within other ranges.
    #  *
    #  * @Param name The name of the NVTX range
    #  * @Param color The predefined gdf_color enum to use to color this range
    #  *
    #  * @Returns
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_nvtx_range_push(char  *  name, gdf_color color )




    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis  Start a NVTX range with a custom ARGB color code.
    #  *
    #  * This function is useful only for profiling with nvvp or Nsight Systems. It
    #  * demarcates the begining of a user-defined range with a specified name and
    #  * color that will show up in the timeline view of nvvp/Nsight Systems. Can be
    #  * nested within other ranges.
    #  *
    #  * @Param name The name of the NVTX range
    #  * @Param color The ARGB hex color code to use to color this range (e.g., 0xFF00FF00)
    #  *
    #  * @Returns
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_nvtx_range_push_hex(char * name, unsigned int color )


    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis Ends the inner-most NVTX range.
    #  *
    #  * This function is useful only for profiling with nvvp or Nsight Systems. It
    #  * will demarcate the end of the inner-most range, i.e., the most recent call to
    #  * gdf_nvtx_range_push.
    #  *
    #  * @Returns
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_nvtx_range_pop()

    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis  Counts the number of valid bits in the mask that corresponds to
    #  * the specified number of rows.
    #  *
    #  * @Param[in] masks Array of gdf_valid_types with enough bits to represent
    #  * num_rows number of rows
    #  * @Param[in] num_rows The number of rows represented in the bit-validity mask.
    #  * @Param[out] count The number of valid rows in the mask
    #  *
    #  * @Returns  GDF_SUCCESS upon successful completion.
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_count_nonzero_mask(gdf_valid_type * masks, int num_rows, int * count)

    # /* column operations */

    cdef gdf_size_type gdf_column_sizeof()

    gdf_error gdf_column_view(gdf_column *column, void *data, gdf_valid_type *valid,
                              gdf_size_type size, gdf_dtype dtype)

    cdef gdf_error gdf_column_view_augmented(gdf_column *column, void *data, gdf_valid_type *valid,
                              gdf_size_type size, gdf_dtype dtype, gdf_size_type null_count)

    cdef gdf_error gdf_column_free(gdf_column *column)

    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis  Concatenates the gdf_columns into a single, contiguous column,
    #  * including the validity bitmasks
    #  *
    #  * @Param[out] output A column whose buffers are already allocated that will
    #  * @Param[in] columns_to_conat[] The columns to concatenate
    #  * @Param[in] num_columns The number of columns to concatenate
    #   * contain the concatenation of the input columns
    #  *
    #  * @Returns GDF_SUCCESS upon successful completion
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_column_concat(gdf_column *output, gdf_column *columns_to_concat[], int num_columns)

    # /* context operations */

    cdef gdf_error gdf_context_view(gdf_context *context,
                                    int flag_sorted,
                                    gdf_method flag_method,
                                    int flag_distinct,
                                    int flag_sort_result,
                                    int flag_sort_inplace)

    # /* error handling */

    cdef const char * gdf_error_get_name(gdf_error errcode)

    cdef int gdf_cuda_last_error()
    cdef const char * gdf_cuda_error_string(int cuda_error)
    cdef const char * gdf_cuda_error_name(int cuda_error)

    # /* ipc */

    cdef gdf_ipc_parser_type* gdf_ipc_parser_open(const uint8_t *schema, size_t length)
    cdef void gdf_ipc_parser_open_recordbatches(gdf_ipc_parser_type *handle,
                                           const uint8_t *recordbatches,
                                           size_t length)

    cdef void gdf_ipc_parser_close(gdf_ipc_parser_type *handle)
    cdef int gdf_ipc_parser_failed(gdf_ipc_parser_type *handle)
    cdef const char* gdf_ipc_parser_to_json(gdf_ipc_parser_type *handle)
    cdef const char* gdf_ipc_parser_get_error(gdf_ipc_parser_type *handle)
    cdef const void* gdf_ipc_parser_get_data(gdf_ipc_parser_type *handle)
    cdef int64_t gdf_ipc_parser_get_data_offset(gdf_ipc_parser_type *handle)

    cdef const char *gdf_ipc_parser_get_schema_json(gdf_ipc_parser_type *handle)
    cdef const char *gdf_ipc_parser_get_layout_json(gdf_ipc_parser_type *handle)


    # /* sorting */
    cdef gdf_radixsort_plan_type* gdf_radixsort_plan(size_t num_items, int descending,
                                            unsigned begin_bit, unsigned end_bit)
    cdef gdf_error gdf_radixsort_plan_setup(gdf_radixsort_plan_type *hdl,
                                       size_t sizeof_key, size_t sizeof_val)
    cdef gdf_error gdf_radixsort_plan_free(gdf_radixsort_plan_type *hdl)
